<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_language"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.luisr.dadomatematico.ui.LanguageActivity"
    android:background="@color/colorAccent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="50dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="50dp">

            <Button
                android:text="@string/btSpanish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btSpanish"
                android:layout_weight="1"
                android:backgroundTint="?android:attr/textColorHint"
                android:fontFamily="cursive"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textStyle="normal|bold"
                android:textColor="@android:color/background_light"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp">

            <Button
                android:text="@string/btEnglish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btEnglish"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textStyle="normal|bold"
                android:textAllCaps="false"
                android:textAlignment="center"
                android:fontFamily="cursive"
                android:textColor="@android:color/background_light"
                android:backgroundTint="?android:attr/textColorHint" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:text="@string/btGalician"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btGalician"
                android:layout_weight="1"
                android:backgroundTint="?android:attr/textColorHint"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textStyle="normal|bold"
                android:textColor="@android:color/background_light"
                android:fontFamily="cursive"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
