<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.luisr.dadomatematico.ui.DiceActivity"
    android:background="@color/colorAccent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="1"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/dados"
                android:layout_weight="1"
                android:textSize="36sp"
                android:fontFamily="cursive"
                android:textAlignment="center"
                android:textColor="@android:color/background_light"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:textStyle="normal|bold"
                android:text="@string/dados" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:layout_marginTop="20dp">

            <Button
                android:text="@string/button12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button12"
                android:layout_weight="0.46"
                android:textStyle="normal|bold"
                android:textAlignment="center"
                android:fontFamily="cursive"
                android:backgroundTint="?android:attr/textColorHighlightInverse"
                android:textColor="@android:color/background_light"
                android:textAllCaps="false"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvDados12"
                android:layout_weight="1"
                android:fontFamily="cursive"
                android:textStyle="normal|bold"
                android:textColor="@android:color/background_light"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:textAllCaps="false" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="71dp"
                android:id="@+id/tvDice"
                android:fontFamily="cursive"
                android:textAlignment="center"
                android:textColor="@android:color/background_light"
                android:layout_weight="1"
                android:textSize="30sp"
                android:textAllCaps="false"
                android:textStyle="normal|bold" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <Button
                android:text="@string/button6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button6"
                android:layout_weight="1"
                android:fontFamily="cursive"
                android:textStyle="normal|bold"
                android:textAlignment="center"
                android:backgroundTint="?android:attr/textColorHighlightInverse"
                android:textColor="@android:color/background_light"
                android:textSize="24sp"
                android:textAllCaps="false" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvDados6"
                android:layout_weight="1"
                android:textAlignment="center"
                android:fontFamily="cursive"
                android:textSize="30sp"
                android:textColor="@android:color/background_light"
                android:layout_marginTop="10dp"
                android:textAllCaps="false"
                android:textStyle="normal|bold" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <Button
                android:text="@string/btPlay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btPlay"
                android:layout_weight="1"
                android:fontFamily="cursive"
                android:textStyle="normal|bold"
                android:textSize="24sp"
                android:textColor="@android:color/background_light"
                android:backgroundTint="?android:attr/textColorHint"
                android:layout_marginTop="20dp" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>